# natis-incident-api

./: .env.example  Dockerfile  README.md  fury.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/models/: incident.py
app/routes/: analyze.py
app/services/: analyzer.py  grid_client.py  report_generator.py  transcription_service.py
app/services/sources/: confluence_client.py  datadog_client.py  drive_client.py  jira_client.py  slack_client.py
n8n/: natis_incident_workflow.json
