[tool.poetry]
name = "natis-incident-api"
version = "1.0.0"
description = "NATIS Incident Analyzer — Fury Backend · IS Shipping Brasil"
authors = ["NATIS <danillo.ferreira@mercadolivre.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
httpx = "^0.27.0"
anthropic = "^0.40.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
python-multipart = "^0.0.17"
opentelemetry-api = "^1.28.0"
opentelemetry-sdk = "^1.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
